# cyberScoreAgenticAI

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE1.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/agents/: __init__.py  ad_rating_agent.py  alert_agent.py  base_agent.py  celery_app.py  chat_agent.py  compliance_agent.py  darkweb_agent.py  m365_rating_agent.py  nthparty_agent.py  orchestrator.py  osint_agent.py  questionnaire_agent.py  report_agent.py
backend/app/api/: deps.py
backend/app/models/: __init__.py  alert.py  audit.py  dispute.py  dora_register.py  grc.py  internal_scoring.py  llm_config.py  questionnaire.py  remediation.py  report.py  scoring.py  supply_chain.py  user.py  vendor.py
backend/app/schemas/: bulk.py  chat.py  common.py  compliance.py  grc.py  integration.py  internal.py  llm_config.py  portal.py  questionnaire.py  scoring.py  supply_chain.py  vendor.py  vrm.py
backend/app/services/: ad_rating_service.py  alert_service.py  benchmark_service.py  compliance_service.py  grc_service.py  llm_provider.py  m365_rating_service.py  proxy_service.py  questionnaire_service.py  rag_service.py  scoring_engine.py  supply_chain_service.py  vendor_service.py  vrm_service.py
backend/app/tools/: __init__.py  base_tool.py  censys_tool.py  ct_logs_tool.py  cve_tool.py  dns_tool.py  hibp_tool.py  reputation_tool.py  shodan_tool.py  ssl_tool.py
backend/app/utils/: constants.py  (+3 more)
backend/tests/: conftest.py  test_scoring_engine.py
(+132 files in other folders)
